--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -13,13 +13,14 @@ permissions:
   packages: write
 
 env:
-  NODE_VERSION: '18'
+  NODE_VERSION: '20.x'
   GHCR_REGISTRY: ghcr.io
   GHP_REGISTRY: docker.pkg.github.com
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push:
-    name: Build and push container images
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
 
     steps:
@@ -38,27 +39,42 @@ jobs:
       - name: Run tests
         run: npm test
 
+  docker:
+    name: Build and publish container images
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.GHCR_REGISTRY }}
-          username: ${{ secrets.GHCR_USERNAME || github.actor }}
-          password: ${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Log in to GitHub Packages
+      - name: Log in to GitHub Packages (Docker)
         uses: docker/login-action@v3
         with:
           registry: ${{ env.GHP_REGISTRY }}
-          username: ${{ secrets.GH_PACKAGES_USERNAME || github.actor }}
-          password: ${{ secrets.GH_PACKAGES_TOKEN || secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.GHCR_REGISTRY }}/${{ github.repository }}
-            ${{ env.GHP_REGISTRY }}/${{ github.repository }}/dav-mcp
+            ${{ env.GHCR_REGISTRY }}/${{ env.IMAGE_NAME }}
+            ${{ env.GHP_REGISTRY }}/${{ env.IMAGE_NAME }}/dav-mcp
           tags: |
             type=ref,event=branch
             type=ref,event=tag
@@ -72,4 +88,29 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
+
+  npm:
+    name: Publish package to GitHub Packages (npm)
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          registry-url: https://npm.pkg.github.com
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Publish package
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
