--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,33 +10,33 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Determine Node.js version
+        id: node-version
+        run: |
+          NODE_VERSION=$(node -p "require('./package.json').engines.node")
+          echo "version=${NODE_VERSION}" >> "$GITHUB_OUTPUT"
+
+      - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ steps.node-version.outputs.version }}
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run tests
         run: npm test
 
       - name: Run tests with coverage
         run: npm run test:coverage
-        if: matrix.node-version == '20.x'
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
-        if: matrix.node-version == '20.x'
         with:
           files: ./coverage/coverage-final.json
           fail_ci_if_error: false
@@ -49,17 +49,48 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Determine Node.js version
+        id: node-version
+        run: |
+          NODE_VERSION=$(node -p "require('./package.json').engines.node")
+          echo "version=${NODE_VERSION}" >> "$GITHUB_OUTPUT"
+
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: '20.x'
+          node-version: ${{ steps.node-version.outputs.version }}
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Check syntax
         run: |
           for file in src/*.js; do
             node --check "$file"
           done
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Determine Node.js version
+        id: node-version
+        run: |
+          NODE_VERSION=$(node -p "require('./package.json').engines.node")
+          echo "version=${NODE_VERSION}" >> "$GITHUB_OUTPUT"
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ steps.node-version.outputs.version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build --if-present
