--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -44,14 +44,14 @@ jobs:
         with:
           registry: ${{ vars.GHCR_REGISTRY || 'ghcr.io' }}
           username: ${{ secrets.GHCR_USERNAME || github.actor }}
-          password: ${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to GitHub Packages
         uses: docker/login-action@v3
         with:
           registry: ${{ vars.GITHUB_PACKAGES_REGISTRY || 'docker.pkg.github.com' }}
           username: ${{ secrets.GH_PACKAGES_USERNAME || github.actor }}
-          password: ${{ secrets.GH_PACKAGES_TOKEN || secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Docker metadata
         id: meta
