Add auto versioning for PR builds

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -6,6 +6,9 @@ on:
       - main
     tags:
       - 'v*'
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -32,19 +35,26 @@ jobs:
 
       - name: Determine image version tag
         id: image-version
+        env:
+          PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           if [[ "$GITHUB_REF" == refs/tags/v* ]]; then
             VERSION="${GITHUB_REF#refs/tags/v}"
           else
+            BASE_VERSION=$(node -p "require('./package.json').version")
             LAST_TAG=$(git tag -l 'v*' --sort=-v:refname | head -n1)
             if [[ -z "$LAST_TAG" ]]; then
-              VERSION="0.1.0"
+              BASE="$BASE_VERSION"
             else
               BASE="${LAST_TAG#v}"
-              IFS='.' read -r MAJOR MINOR PATCH <<< "$BASE"
-              MINOR=$((MINOR+1))
-              VERSION="${MAJOR}.${MINOR}.0"
             fi
+            IFS='.' read -r MAJOR MINOR PATCH <<< "$BASE"
+            if [[ -n "$PR_NUMBER" ]]; then
+              MINOR=$((MINOR + PR_NUMBER))
+            else
+              MINOR=$((MINOR + 1))
+            fi
+            VERSION="${MAJOR}.${MINOR}.0"
           fi
           echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
 
@@ -61,6 +71,7 @@ jobs:
         run: npm test
 
       - name: Log in to GHCR
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ vars.GHCR_REGISTRY || 'ghcr.io' }}
@@ -68,6 +79,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to GitHub Packages
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ vars.GITHUB_PACKAGES_REGISTRY || 'docker.pkg.github.com' }}
@@ -75,6 +87,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ vars.DOCKERHUB_REGISTRY || 'docker.io' }}
@@ -100,7 +113,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
